--- a/Day1/Hello/pom.xml
+++ b/Day1/Hello/pom.xml
@@ -4,4 +4,13 @@
 	<groupId>org.tektutor</groupId>
 	<artifactId>hello-world</artifactId>
 	<version>1.0.0</version>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
