Added deploy configuration in pom xml.

--- a/Day1/multi-module-project/pom.xml
+++ b/Day1/multi-module-project/pom.xml
@@ -22,4 +22,11 @@
 		<module>cpp</module>
 	</modules>
 
+	<distributionManagement>
+		<repository>
+			<id>artifactory</id>
+			<url>http://localhost:8082/ui/native/tektutor</url>
+		</repository>
+	</distributionManagement>
+
 </project>
