Updated pom xml

--- a/Day1/multi-module-project/pom.xml
+++ b/Day1/multi-module-project/pom.xml
@@ -25,7 +25,7 @@
 	<distributionManagement>
 		<repository>
 			<id>artifactory</id>
-			<url>http://localhost:8082/ui/native/tektutor</url>
+			<url>http://localhost:8082/artifactory/tektutor</url>
 		</repository>
 	</distributionManagement>
 
