--- a/Day1/multi-module-project/pom.xml
+++ b/Day1/multi-module-project/pom.xml
@@ -6,6 +6,11 @@
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
+	<properties>
+		<maven-compiler-source>1.8</maven-compiler-source>
+		<maven-compiler-target>1.8</maven-compiler-target>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
