--- a/Day5/prometheus-grafana/prometheus.yml
+++ b/Day5/prometheus-grafana/prometheus.yml
@@ -35,4 +35,4 @@ scrape_configs:
     metrics_path: /prometheus
 
     static_configs:
-      - targets: ["localhost:8080"]
+      - targets: ["192.168.1.80:8080"]
