Commented cpp submodule in multi-module project.

--- a/Day1/multi-module-project/pom.xml
+++ b/Day1/multi-module-project/pom.xml
@@ -24,7 +24,7 @@
 		<module>businesslayer</module>
 		<module>backend</module>
 		<module>main</module>
-		<module>cpp</module>
+		<!--		<module>cpp</module> -->
 	</modules>
 
 	<distributionManagement>
