--- a/Day5/multi-module-project/Jenkinsfile
+++ b/Day5/multi-module-project/Jenkinsfile
@@ -7,28 +7,36 @@ pipeline {
         stage('Compile') {
             steps {
                 script {
-                    sh "mvn clean compile"
+                    dir("Day5/multi-module-project") {
+                        sh "mvn clean compile"
+                    )
                 }
             }
         }
         stage('Unit Test') {
             steps {
                 script {
-                    sh "mvn test"
+                    dir("Day5/multi-module-project") {
+                        sh "mvn test"
+                    )
                 }
             }
         }
         stage('package') {
             steps {
                 script {
-                    sh "mvn package"
+                    dir("Day5/multi-module-project") {
+                        sh "mvn package"
+                    )
                 }
             }
         }
         stage('Install') {
             steps {
                 script {
-                    sh "mvn install"
+                    dir("Day5/multi-module-project") {
+                        sh "mvn install"
+                    )
                 }
             }
         }
